just let it run

--- a/dubbo-admin-server/src/main/resources/application.properties
+++ b/dubbo-admin-server/src/main/resources/application.properties
@@ -16,17 +16,24 @@
 #
 
 # centers in dubbo2.7
-admin.registry.address=zookeeper://127.0.0.1:2181
-admin.config-center=zookeeper://127.0.0.1:2181
-admin.metadata-report.address=zookeeper://127.0.0.1:2181
+#admin.registry.address=zookeeper://127.0.0.1:2181
+#admin.config-center=zookeeper://127.0.0.1:2181
+#admin.metadata-report.address=zookeeper://127.0.0.1:2181
+#
+##group
+#admin.registry.group=dubbo
+#admin.config-center.group=dubbo
+#admin.metadata-report.group=dubbo
+#
+#admin.apollo.token=e16e5cd903fd0c97a116c873b448544b9d086de9
+#admin.apollo.appId=test
+#admin.apollo.env=dev
+#admin.apollo.cluster=default
+#admin.apollo.namespace=dubbo
 
-#group
-admin.registry.group=dubbo
-admin.config-center.group=dubbo
-admin.metadata-report.group=dubbo
 
-admin.apollo.token=e16e5cd903fd0c97a116c873b448544b9d086de9
-admin.apollo.appId=test
-admin.apollo.env=dev
-admin.apollo.cluster=default
-admin.apollo.namespace=dubbo
+#b¶Ëdev
+admin.registry.address=zookeeper://dev-zookeeper.ares.lianjia.com:2181
+admin.registry.group=/qianqian/dubbo
+admin.config-center.username=qianqian
+admin.config-center.password=7c75GY5801K
