--- a/dubbo-admin-server/src/main/resources/application.properties
+++ b/dubbo-admin-server/src/main/resources/application.properties
@@ -33,7 +33,26 @@
 
 
 #b¶Ëdev
-admin.registry.address=zookeeper://dev-zookeeper.ares.lianjia.com:2181
-admin.registry.group=/qianqian/dubbo
-admin.config-center.username=qianqian
-admin.config-center.password=7c75GY5801K
+#admin.registry.address=zookeeper://dev-zookeeper.ares.lianjia.com:2181
+#admin.registry.group=/qianqian/dubbo
+#admin.config-center.username=qianqian
+#admin.config-center.password=7c75GY5801K
+
+#test3
+#admin.registry.address=zookeeper://zk01-test.lianjia.com:2181
+#admin.registry.group=/home3/qianqian/dubbo
+#admin.config-center.username=home3
+#admin.config-center.password=1270A83Af8
+
+#test2
+#admin.registry.address=zookeeper://zk01-test.lianjia.com:2181
+#admin.registry.group=/home2/qianqian/dubbo
+#admin.config-center.username=home2
+#admin.config-center.password=bab5ff85
+
+
+#test1
+admin.registry.address=zookeeper://zk01-test.lianjia.com:2181
+admin.registry.group=/home/qianqian/dubbo
+admin.config-center.username=home
+admin.config-center.password=Io9334mV
